--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,9 @@
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
+    "skipLibCheck": true, // Skip type checking of declaration files (optional, for performance)
+    "strict": false,  // Disable strict mode, which allows more flexible types like `any`
+    "noImplicitAny": false, // Allow the use of `any` without errors
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
